[package]
name = "news_cli"
version = "0.1.0"
edition = "2021"
authors = ["Bishal Goon <goonbishal.bg@gmail.com>"]
license = "MIT"

[dependencies]
newsapi = { features = ["async"], path = "./newsapi" }
crossterm = "0.28.1"
dotenv = "0.15.0"
termimad = "0.30.0"
tokio = { features = ["full"], version = "1.39.2" }
